2006-03-06  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source_prefs.glade: Increased width of preferences window
	to 500.

	* glade/frysk_source_prefs.glade: Gave meaningful names to scrolled
	pane and viewport for preferences.

	* DummySourceWindow.java (initializePreferences): Copied
	from Gui.java.
	(buildHandler): Ditto.
	(setupErrorLogging): Ditto.
	(importPreferences): Ditto.
	(DummySourceWin): Now loads preferences and initializes model.

	* DebugHistory.java: Added comments.

2006-03-03  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): Added.
	* glade/frysk_source_prefs.java: Removed HBox from right side
	of widget, replaced with VBox in a scrollable area.

2006-03-01  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Fixed text != NULL bug.
	More hig compatablility changes.

2006-02-28  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Fixed vPane position... was causing
	exception when frysk is frist run.

2006-02-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added wizzard for creating a new debug
	session.
	made lots of small changes to make frysk more HIG compatable.

2006-02-23  Adam Jocksch  <ajocksch@redhat.com>

	* DebugHistory.java: Now keeps 'events' in a Vector.
	(DebugHistory): Initializes events in the vector and sets the
	size of the widget based on the number of events.
	(exposeEvent): Delegates drawing of actual events to the events
	themselves.
	(ObserverEvent): Added, represents an event and is responsible
	for the drawing said event.
	* DummyDebugResults.java (DummyDebugResults): Checkboxes are now
	added to a SizeGroup and ColorButtons have been added next to each
	checkbox.
	* glade/debugresultswindow.glade: Fixed widget spacing and added label
	to the observer selector scrolled area.

	* DebugHistory.java: Removed extraneous import.

2006-02-22  Adam Jocksch  <ajocksch@redhat.com>

	* DebugHistory.java (exposeEvent): Added text over each 'event'.
